# CargoDash

./: .gitignore  CHANGELOG.md  README.md  README_ch.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
cargodash/: __init__.py
cargodash/core/: __init__.py  module.py  pipeline.py
cargodash/data_utils/: __init__.py  batch.py  queue.py  schema.py
cargodash/models/: __init__.py  client.py  llm_call.py  local_hf.py  local_vllm.py
cargodash/modules/: __init__.py  join.py  judge.py  output.py  processor.py  source.py
cargodash/runtime/: executor.py
cargodash/voting/: vote.py
examples/: basic_pipeline.py  vllm_pipeline.py
recipes/verified-math-reasoning/: .gitignore  pipeline.cdgraph.json
tests/: __init__.py  test_batch.py  test_executor.py  test_graph.py  test_io.py  test_join.py  test_judge.py  test_llm_call.py  test_pipeline.py  test_processor.py  test_retry.py  test_schema.py  test_vote.py
webui/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webui/scripts/: smoke_codegen.ts  smoke_dry_run.ts
webui/src/: App.js  App.tsx  main.js
webui/src/canvas/: Canvas.js  Canvas.tsx  DeletableEdge.js
webui/src/codegen/: generate.js  generate.ts
webui/src/nodes/: DataOutputNode.js  JoinByIdNode.js  JoinByIdNode.tsx  JudgeNode.js  LLMCallNode.js  LLMCallNode.tsx  ModelSpecNode.js  ModelSpecNode.tsx  NodeShell.js  ProcessorNode.js  RawDataSourceNode.js  VoteNode.js  defaults.js  defaults.ts  index.js  index.ts
webui/src/panels/: CodeField.js  CodeField.tsx  NodePalette.js  NodePalette.tsx  PropertiesPanel.js  PropertiesPanel.tsx  SchemaEditor.js  (+2 more)
(+4 files in other folders)
