[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cargodash"
version = "0.1.0"
description = "Modular pipeline for LLM training data synthesis and augmentation"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["cargodash"]
