[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cargodash"
version = "0.1.0"
description = "Modular pipeline for LLM training data synthesis and augmentation"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=15.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
local-hf = ["transformers>=4.40", "torch>=2.1"]
local-vllm = ["vllm>=0.5", "openai>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["cargodash"]
